[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/ObstacleHandler.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy/enemy_3.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/music/EnV - Paladin.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/pressure_plate_2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/cutting_rope_1.wav" type="AudioStream" id=5]

[node name="ObstacleHandler" type="Node2D"]
script = ExtResource( 1 )

[node name="SoundCueClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SoundEffects"

[node name="SoundCueCut" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SoundEffects"

[node name="SoundCueGrunt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SoundEffects"

[node name="Song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"
